[tool.poetry]
name = "jnt-django-toolbox"
version = "0.3.5"
description = ""
authors = ["Junte <tech@junte.ru>"]
classifiers=[
        'Environment :: Web Environment',
        'Intended Audience :: Developers',
        'License :: OSI Approved :: MIT License',
        'Operating System :: OS Independent',
        'Framework :: Django :: 3.2',
        'Topic :: Software Development :: Libraries :: Python Modules'
]

packages = [
    { include = "jnt_django_toolbox", from ="src" }
]

[tool.poetry.dependencies]
python = "^3.9"
django = ">=3.2"
dateparser = "*"
jaeger-client = {version = "*", optional = true}

[tool.poetry.dev-dependencies]
mypy = "*"
polint = "*"
dennis = "*"
xenon = "*"
safety = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
pytest-xdist = "*"
flake8 = "*"
flake8-pytest-style = "*"
pytest-freezegun = "*"
wemake-python-styleguide = "*"
black = "*"
flake8-class-attributes-order = "*"

[tool.poetry.extras]
jaeger = ["jaeger-client"]

[tool.black]
line-length = 79
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
(
  /(
    | \.git          # root of the project
    | \.mypy_cache
    | \.pytest_cache
    | .*\/migrations
  )/
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
